--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sage-nodejs",
   "version": "0.0.1",
   "description": "",
+  "engines" : { "node" : ">=8" },
   "main": "lib/index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
