--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "sage-nodejs",
   "version": "0.1.1",
   "description": "",
-  "engines" : { "node" : ">=8" },
+  "engines": {
+    "node": ">=8"
+  },
   "main": "lib/index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
@@ -20,7 +22,6 @@
     "jsdoc-to-markdown": "^4.0.1"
   },
   "dependencies": {
-    "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
