--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watchAll",
+    "test": "./node_modules/.bin/jest tests/unit",
+    "test:watch": "./node_modules/.bin/jest tests/unit --watchAll",
+    "e2e": "./node_modules/.bin/jest tests/e2e",
+    "e2e:watch": "./node_modules/.bin/jest tests/e2e --watchAll",
     "docs": "./node_modules/.bin/jsdoc2md lib/index.js >  DOCUMENTATION.md",
     "lint": "./node_modules/.bin/eslint lib"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
+    "express": "^4.16.3",
     "jest": "^23.3.0",
-    "jsdoc-to-markdown": "^4.0.1"
+    "jsdoc-to-markdown": "^4.0.1",
+    "puppeteer": "^1.7.0"
   },
   "dependencies": {
     "request": "^2.87.0",
