--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "./node_modules/.bin/jest tests/e2e",
     "e2e:watch": "./node_modules/.bin/jest tests/e2e --watchAll",
     "docs": "./node_modules/.bin/jsdoc2md lib/index.js >  DOCUMENTATION.md",
-    "lint": "./node_modules/.bin/eslint lib"
+    "lint": "./node_modules/.bin/eslint ."
   },
   "author": "",
   "license": "ISC",
